<resources>
    <string name="app_name">Lyricalia</string>
    <string name="name">Nome</string>
    <string name="login">Entrar</string>
    <string name="user">usuário</string>
    <string name="server_ip">IP do servidor</string>
    <string name="logout">
        <u>sair</u>
    </string>
    <string name="connect">Conectar</string>
    <string name="spotifyHint">$USER, conecte com sua biblioteca do Spotify para continuar</string>
    <string name="accessibility_logout_button">Logout button</string>
    <string name="placeholder_greeting">Oi, $USER!</string>
    <string name="notification_permission_rationale_title">Precisamos de permissões de notificações</string>
    <string name="notification_permission_rationale_explanation">pra te avisar quando o processo de conectar com o Spotify estiver completo</string>
    <string name="okay_confirm">Tudo bem</string>
    <string name="later_dismiss">Mais tarde</string>
    <string name="loading_hint">Pensando sobre seu gosto musical...</string>
    <string name="loading_hint_simpler">PENSANDO...</string>
    <string name="new_match">Nova partida</string>
    <string name="song_limit">Limite de músicas:</string>
    <string name="song_limit_about">O limite de músicas não garante um número mínimo de músicas, pois os integrantes da partida podem não ter tantas músicas em comum.</string>
    <string name="create">Criar</string>
    <string name="join_match">Entrar em partida</string>
    <string name="error_match_creation">Não foi possível criar a partida, tente novamente</string>
    <string name="error_match_not_found">Partida não encontrada</string>
    <string name="host_join_hint">Compartilhe o nome da sala com seus amigos para jogarem juntos!</string>
    <string name="play">Jogar</string>
    <string name="join">Entrar</string>
    <string name="error_match_cannot_join">Não foi possível entrar na sala :(</string>
    <string name="matchId">Nome da sala</string>
    <string name="hint_fill_lyrics">Complete a letra de...</string>
    <string name="send">Enviar</string>
    <string name="podium">Pódio Final!</string>
    <string name="back_to_menu">Voltar para o Menu</string>
</resources>