<?xml version="1.0" encoding="utf-8"?>

<layout>
    <data>
        <import type="android.view.View"/>
        <variable
            name="isLoading"
            type="boolean" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lyWhite"
        tools:context=".activities.MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/safeZone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/layout_bg"
            android:weightSum="1"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/lyricaliaTextBrand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:textColor="@color/lyDarkerGray"
                android:text="@string/app_name"
                android:fontFamily="@font/domine"
                android:textFontWeight="600"
                android:textSize="70sp"
                app:layout_constraintStart_toStartOf="@id/safeZone"
                app:layout_constraintEnd_toEndOf="@id/safeZone"
                app:layout_constraintTop_toTopOf="@id/safeZone"
                app:layout_constraintBottom_toBottomOf="@id/safeZone"
                app:layout_constraintVertical_bias="0.1" />

            <EditText
                android:autofillHints="name"
                android:id="@+id/nameText"
                android:layout_width="250dp"
                android:minHeight="48dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/name"
                android:textColor="@color/lyGray"
                android:fontFamily="@font/domine"
                app:layout_constraintStart_toStartOf="@id/safeZone"
                app:layout_constraintEnd_toEndOf="@id/safeZone"
                app:layout_constraintTop_toBottomOf="@id/lyricaliaTextBrand"
                app:layout_constraintBottom_toBottomOf="@id/safeZone"
                app:layout_constraintVertical_bias="0.2" />

            <EditText
                android:autofillHints="username"
                android:id="@+id/usernameText"
                android:layout_width="250dp"
                android:minHeight="48dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/user"
                android:textColor="@color/lyGray"
                android:fontFamily="@font/domine"
                app:layout_constraintStart_toStartOf="@id/safeZone"
                app:layout_constraintEnd_toEndOf="@id/safeZone"
                app:layout_constraintTop_toBottomOf="@id/nameText"
                app:layout_constraintBottom_toBottomOf="@id/safeZone"
                app:layout_constraintVertical_bias="0.05" />

            <EditText
                android:id="@+id/serverIp"
                android:layout_width="250dp"
                android:minHeight="48dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/server_ip"
                android:textColor="@color/lyGray"
                android:fontFamily="@font/domine"
                app:layout_constraintStart_toStartOf="@id/safeZone"
                app:layout_constraintEnd_toEndOf="@id/safeZone"
                app:layout_constraintTop_toBottomOf="@id/usernameText"
                app:layout_constraintBottom_toBottomOf="@id/safeZone"
                app:layout_constraintVertical_bias="0.05" />

            <ProgressBar
                android:id="@+id/loadingSpinner"
                android:minWidth="50dp"
                android:layout_width="wrap_content"
                android:minHeight="50dp"
                android:layout_height="wrap_content"
                android:layout_above="@id/lyricaliaTextBrand"
                app:layout_constraintStart_toStartOf="@id/safeZone"
                app:layout_constraintEnd_toEndOf="@id/safeZone"
                app:layout_constraintTop_toBottomOf="@id/usernameText"
                app:layout_constraintBottom_toBottomOf="@id/safeZone"
                android:visibility="@{isLoading ? View.VISIBLE : View.GONE}" />

            <Button
                android:id="@+id/submitUserButton"
                android:minWidth="200dp"
                android:layout_width="wrap_content"
                android:minHeight="50dp"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:fontFamily="@font/domine"
                android:textFontWeight="600"
                android:textColor="@color/Black"
                android:backgroundTint="@color/lyGreen"
                android:layout_above="@id/lyricaliaTextBrand"
                app:layout_constraintStart_toStartOf="@id/safeZone"
                app:layout_constraintEnd_toEndOf="@id/safeZone"
                app:layout_constraintTop_toBottomOf="@id/usernameText"
                app:layout_constraintBottom_toBottomOf="@id/safeZone"
                android:visibility="@{isLoading ? View.GONE : View.VISIBLE}" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
