<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/menu"
        android:weightSum="1"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:background="@color/lyWhite"
        android:padding="10dp"
        tools:context=".activities.MenuActivity"
        android:clipToPadding="false">

        <ImageButton
            android:id="@+id/backButton"
            android:minWidth="50dp"
            android:layout_width="wrap_content"
            android:minHeight="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="-6dp"
            android:src="@drawable/baseline_arrow_back_24"
            android:fontFamily="@font/domine"
            android:textFontWeight="200"
            android:textColor="@color/lyDarkerGray"
            android:backgroundTint="#00FFFFFF"
            android:layout_above="@id/newMatchTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/newMatchTitle"
            app:layout_constraintBottom_toBottomOf="@id/newMatchTitle"
            app:layout_constraintHorizontal_bias="0" />

        <TextView
            android:id="@+id/newMatchTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:textColor="@color/lyDarkerGray"
            android:text="@string/join_match"
            android:fontFamily="@font/domine"
            android:textFontWeight="600"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginStart="-10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="-10dp"
            android:background="@drawable/bottom_only_shade"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/newMatchTitle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0" />

        <ImageView
            android:id="@+id/gclef"
            android:layout_width="35dp"
            android:layout_height="100dp"
            android:src="@drawable/gclef"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:rotation="22"
            android:visibility="invisible"/>
        <TextView
            android:id="@+id/loadingHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/domine"
            android:textColor="@color/lyDarkerGray"
            android:textSize="22sp"
            android:text="@string/loading_hint_simpler"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:paddingHorizontal="10dp"
            app:layout_constraintTop_toBottomOf="@id/gclef"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0"
            android:visibility="invisible"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mainContent"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider"
            app:layout_constraintVertical_bias="0"
            android:layout_marginTop="10dp"
            android:paddingHorizontal="10dp"
            android:orientation="vertical">
            <EditText
                android:focusable="true"
                android:id="@+id/matchIdEditText"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:textStyle="bold"
                android:fontFamily="@font/domine"
                android:textColor="@color/lyDarkerGray"
                android:textSize="24sp"
                android:textAlignment="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="-20dp"/>
            <TextView
                android:id="@+id/matchIdHint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/domine"
                android:textColor="@color/lyDarkerGray"
                android:textSize="18sp"
                android:text="@string/matchId"
                android:layout_marginTop="-5dp"
                app:layout_constraintTop_toBottomOf="@id/matchIdEditText"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="0" />
            <TextView
                android:id="@+id/errorHint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/domine"
                android:textColor="@color/lyRed"
                android:textSize="14sp"
                android:text="@string/error_match_cannot_join"
                android:textStyle="bold"
                android:layout_marginTop="40dp"
                app:layout_constraintTop_toBottomOf="@id/matchIdHint"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="0"
                android:visibility="invisible" />
            <Button
                android:id="@+id/joinMatchButton"
                android:minWidth="200dp"
                android:layout_width="wrap_content"
                android:minHeight="50dp"
                android:layout_height="wrap_content"
                android:text="@string/join"
                android:fontFamily="@font/domine"
                android:textStyle="bold"
                android:textColor="@color/Black"
                android:backgroundTint="@color/lyGreen"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/errorHint"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="40dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
